--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ featured-image_path: images/whitedesk.jpg
     </p>
 
     <p>
-      Welcome to my website, which has no specific purpose other then to show you how cool I am. I also coded this entire site all my myself and wanted to show it off. Also, I wanted to this to show up on Google instead of my ski-racing times from when I was 8 or my incredibly flattering college photos. Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I am an instructor so naturally I love to tell people what to do. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I get overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I meant when I said creative mess?
+      Welcome to my website, which has no specific purpose other than to give you a digital glimpse of my life. It's always exciting when you add a dot com behind your name. Also, I want to this to show up on Google instead of my ski-racing times from when I was 8 or my incredibly flattering college photos. Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I am a fitness instructor so naturally I love to tell people what to do. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I am overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I mean when I said creative mess?
       <br /> <br />
 
-      I've been living in Asia for the past year. I've done everything from teach english, to learn how to code, to teach indoor cycling in Bangkok - mostly I've spent the last year traveling. My biggest goal in life is to hit 30 countries before I turn 30. Next up are Myanmar, Malaysia, and Singapore.
+      I've been living in Asia for the past year. I've done everything from teach english, to learn how to code, to teach indoor cycling in Bangkok - mostly I've spent the last year traveling. My current goal is to travel to 30 countries before I turn 30 - I have 2 years to touchdown in 6 countries! Next up are Myanmar, Malaysia, and Singapore.
 
 
       <br />
@@ -73,7 +73,7 @@ featured-image_path: images/whitedesk.jpg
 
 <!-- RANDOMNESS -->
 <section class="grid-centered">
-<div class="container feedpost col-6">
+<div class="container feedpost col-6_sm-12">
 <h2 class="centered underline">Latest Posts </h2>
 <div class="grid blog-loop feedpost">
   {% for post in site.posts limit:2 %}
@@ -89,12 +89,12 @@ featured-image_path: images/whitedesk.jpg
     {% endfor %}
 </div>
 <p>
-  <a class="button" href="/blog.html">More Posts</a>
+  <a class="right-text" href="/blog.html">MORE POSTS</a>
 </p>
 </div>
 
 
-<div class="col-6 centered">
+<div class="col-6_sm-12 centered">
   <h2 class="underline">Latest Jams</h2>
   <p class="centered">
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
