--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,11 @@ layout: default
 description: portfolio
 ---
 <section class="grid-center">
-<div class="col-6">
+<div class="col-6_sm-12">
 <h4 class="underline">One Rule. One Rule Only.</h4>
 <p class="tagline">...yoga pants are my uniform</p>
 <p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's.</p>
-<a class="button centered" href="../pdf/funresume.pdf"> Download Resume</a>
+<p class="centered"><a class="button centered" href="../pdf/funresume.pdf"> Download Resume</a></p>
 </div>
 
 <div class="col-6 mob-hide">
@@ -20,7 +20,7 @@ description: portfolio
   <hr />
   <div>
   <h4 class="centered-text underline">Side Hustle</h4>
-  <p class="tagline center-text no-padding">...I code for fun!</p>
+  <p class="tagline center-text no-padding">...Coding is fun!</p>
   <p class="center-text">
     My side hustle is freelancing websites. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
 
@@ -33,9 +33,9 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col-3_sm-12 porfolio"></div></a>
+  <div id="lineabody" class="col-3_sm-12"></div></a>
 
-  <div id="freebird" class="col-3_sm-12 porfolio"></div>
+  <div id="freebird" class="col-3_sm-12 mob-hide "></div>
 
   <a target="blank" href="http://www.erinwrightphotography.com">
   <div id="erinwright" class="col-3 mob-hide portfolio"></div></a>
