--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ featured-image_path: images/whitedesk.jpg
       <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
       <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
     </p>
-    <br />
+    <i class="fa fa-angle-double-down" aria-hidden="true"></i>
   </section>
 
   <!-- TAGLINE SECTIONS -->
