--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ featured-image_path: images/whitedesk.jpg
       <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
       <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
     </p>
-    <i class="fa fa-angle-double-down" aria-hidden="true"></i>
+    <i class="fa fa-angle-double-down tagline" aria-hidden="true"></i>
   </section>
 
   <!-- TAGLINE SECTIONS -->
@@ -74,7 +74,8 @@ featured-image_path: images/whitedesk.jpg
 <!-- RANDOMNESS -->
 <section class="grid-centered">
 <div class="container feedpost col-6_sm-12">
-<h2 class="centered underline">Latest Posts </h2>
+<h2>Latest Posts </h2>
+<hr class="style1" />
 <div class="grid blog-loop feedpost">
   {% for post in site.posts limit:2 %}
     <div class="feedpost">
@@ -88,14 +89,13 @@ featured-image_path: images/whitedesk.jpg
       </div>
     {% endfor %}
 </div>
-<p>
-  <a class="right-text" href="/blog.html">MORE POSTS</a>
-</p>
+<p class="right-text"><a href="/blog.html">MORE POSTS</a></p>
 </div>
 
 
 <div class="col-6_sm-12 centered">
-  <h2 class="underline">Latest Jams</h2>
+  <h2>Latest Jams</h2>
+  <hr class="style1" />
   <p class="centered">
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
 </div>
