--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ featured-image_path: images/whitedesk.jpg
     <p class="tagline">
       Fitness Junkie - Coffee Enthusiast - Wannabe Rapper
     </p>
-
+<br />
     <p>
       Welcome to my website, which has no specific purpose other than to give you a digital glimpse of my life. It's always exciting when you add a dot com behind your name. Also, I want to this to show up on Google instead of my ski-racing times from when I was 8 or my incredibly flattering college photos. Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I am a fitness instructor so naturally I love to tell people what to do. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I am overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I mean when I said creative mess?
       <br /> <br />
@@ -30,7 +30,7 @@ featured-image_path: images/whitedesk.jpg
       <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
       <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
     </p>
-    <i class="fa fa-angle-double-down tagline" aria-hidden="true"></i>
+
   </section>
 
   <!-- TAGLINE SECTIONS -->
@@ -89,13 +89,14 @@ featured-image_path: images/whitedesk.jpg
       </div>
     {% endfor %}
 </div>
-<p class="right-text"><a href="/blog.html">MORE POSTS</a></p>
+<p class="right-text"><a href="/blog.html">View Blog</a></p>
 </div>
 
 
 <div class="col-6_sm-12 centered">
   <h2>Latest Jams</h2>
   <hr class="style1" />
+  <br />
   <p class="centered">
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
 </div>
