--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@ description: portfolio
 ---
 <section class="grid-center">
 <div class="col-6_sm-12">
-<h4 class="underline">One Rule. One Rule Only.</h4>
+<h2 class="underline">One Rule. One Rule Only.</h2>
 <p class="tagline">...yoga pants are my uniform</p>
 <p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's.</p>
 <p class="centered"><a class="button centered" href="../pdf/funresume.pdf"> Download Resume</a></p>
@@ -49,13 +49,15 @@ description: portfolio
 
 <section class="grid">
   <div class="col-6_sm-12">
-  <h4 class="underline">Give Back</h4>
+  <h4>Give Back</h4>
+  <hr class="style1" />
   <p>
     Do you know of an organization that would love a FREE website? Currently working on Ageless Aviation Dreams Foundation. I will have space to take on another project this fall. Please <a href="/index.html">contact me</a> with any organizations that could use a bosst in their online presence.
   </p>
   </div>
   <div class="col-6_sm-12">
-    <h4 class="underline">Currently Learning</h4>
+    <h4>Currently Learning</h4>
+    <hr class="style1" />
     <p>
       Continuously learning is something so important to me. No matter what role I'm in I like to stretch my mind, expand my horizons, and put my free time (between Netflix shows) to good use.
     </p>
