--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ featured-image_path: images/whitedesk.jpg
 
     <h1>Hi, I'm Laura</h1>
 
-    <p class="tagline">
+    <p class="taglinecenter">
       Fitness Junkie - Coffee Enthusiast - Wannabe Rapper
     </p>
 <br />
@@ -89,7 +89,7 @@ featured-image_path: images/whitedesk.jpg
       </div>
     {% endfor %}
 </div>
-<p class="right-text"><a href="/blog.html">View Blog</a></p>
+<p class="right-text"><a href="/blog.html">VIEW BLOG</a></p>
 </div>
 
 
@@ -98,7 +98,7 @@ featured-image_path: images/whitedesk.jpg
   <hr class="style1" />
   <br />
   <p class="centered">
-<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="600" height="470" frameborder="0" allowtransparency="true"></iframe>
+<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="580" height="450" frameborder="0" allowtransparency="true"></iframe>
 </div>
 </section>
 
