--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@ description: portfolio
 <div class="col-6_sm-12">
 <h2 class="underline">One Rule. One Rule Only.</h2>
 <p class="tagline">...yoga pants are my uniform</p>
-<p>I've worked in health and fitness for the past five years. I've done everything from Corporate Wellness, to working for an outdoor workout series, to being a full-time fitness traveling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's.</p>
+<p>I've worked in health and fitness for the past five years. I've worked in Corporate Wellness, to working for an outdoor workout series, to being a full-time indoor cycling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's.</p>
 <p class="centered"><a class="button centered" href="../pdf/funresume.pdf"> Download Resume</a></p>
 </div>
 
@@ -24,7 +24,7 @@ description: portfolio
   <p class="center-text">
     My side hustle is freelancing websites. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
 
-    Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and moments when wonder why. And then it pops out it's head may be in the shape of a cone. Websites are similar, always a work in progress and eventually you are done and you are proud of them. Below are my portfolio sites, some are done... some are under construction. I'm not ashamed to show you the process! Check it out.  <br /><br /> You may also peep my GitHub. I apologize in advance for the commit names. <br />
+    Building websites is a constant creative process from the inital build, to content, to fine tuning letter spacing. Here are a few of my sites. Some are finished projects and some are still under construction. Take a look! <br /><br /> You may also peep my GitHub. I apologize in advance for the commit names. <br />
     <a target="blank" class="color" href="https://www.github.com/lauratreg"><i class="fa fa-github" aria-hidden="true"></i></a>
   </p>
   <br />
@@ -50,7 +50,7 @@ description: portfolio
 
 <section class="grid">
   <div class="col-6_sm-12">
-  <h3>Give Back</h3>
+  <h3>Non-Profit Sites</h3>
   <hr class="style1" />
   <p>
     Do you know of an organization that would love a FREE website? Currently working on Ageless Aviation Dreams Foundation. I will have space to take on another project this fall. Please <a href="/index.html">contact me</a> with any organizations that could use a bosst in their online presence.
