commit sync all day

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@ description: portfolio
   <h3 class="centered-text underline">Side Hustle</h3>
   <p class="tagline center-text no-padding">...Coding is fun!</p>
   <p class="center-text">
-    My side hustle is freelancing websites. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
+    My side hustle is freelance web development. I build every website is custom built using HTML5, CSS3, and bit of JavaScript. Jekyll pulls it all together - no website builders or templates here! If you want to know how I learned how to code in 10 days check out my blog post about <a target="blank" href="http://www.instituteofcode.com">The Institute of Code in Canngu, Bali.</a>
 
-    Building websites is a constant creative process from the inital build, to content, to fine tuning letter spacing. Here are a few of my sites. Some are finished projects and some are still under construction. Take a look! <br /><br /> You may also peep my GitHub. I apologize in advance for the commit names. <br />
+    Building websites is a constant creative process from the inital build, to content, to fine tuning letter spacing. Here are a few of my sites. Some are finished projects and some are still under construction. Take a look! For inquires, please send me an email. <br /><br /> You may also peep my GitHub. I apologize in advance for the commit names. <br />
     <a target="blank" class="color" href="https://www.github.com/lauratreg"><i class="fa fa-github" aria-hidden="true"></i></a>
   </p>
   <br />
