--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ featured-image_path: images/whitedesk.jpg
   <h2>Latest Jams</h2>
   <hr class="style1" />
   <br />
-  <p class="centered spotify">
-<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="580" height="450" frameborder="0" allowtransparency="true"></iframe></p>
+  <div class="centered spotify">
+<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="580" height="450" frameborder="0" allowtransparency="true"></iframe></div>
 </div>
 </section>
 
