--- a/portfolio.html
+++ b/portfolio.html
@@ -34,15 +34,15 @@ description: portfolio
 <div class="grid-spaceAround">
 
   <a target="blank" href="http://www.lineabody.com">
-  <div id="lineabody" class="col-3_sm-12"></div></a>
+  <div id="lineabody" class="col-6_sm-12"></div></a>
 
-  <div id="freebird" class="col-3_sm-12 mob-hide "></div>
+  <div id="freebird" class="col-6_sm-12 mob-hide "></div>
 
-  <a target="blank" href="http://www.erinwrightphotography.com">
+  <!-- <a target="blank" href="http://www.erinwrightphotography.com">
   <div id="erinwright" class="col-3 mob-hide portfolio"></div></a>
 
   <a target="blank" href="#">
-  <div id="balmbeats" class="col-3 mob-hide"></div></a>
+  <div id="balmbeats" class="col-3 mob-hide"></div></a> -->
 
 </div>
 
