--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@ description: portfolio
 </div>
 
 <div class="col-6 mob-hide">
-  <img class="about right-text" src="images/biggie.jpg" />
+  <img class="about right-text" src="images/me.jpg" />
 </div>
 
 </section>
