--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,11 @@ description: portfolio
 <h2 class="underline">One Rule. One Rule Only.</h2>
 <p class="tagline">...yoga pants are my uniform</p>
 <p>I've worked in health and fitness for the past five years. I've worked in Corporate Wellness, to working for an outdoor workout series, to being a full-time indoor cycling instructor. Recently I learned how to code and have been freelancing websites as I travel around asia. All from the comfort of my Lulu's.</p>
-<p class="centered"><a class="button centered" href="../pdf/funresume.pdf"> Download Resume</a></p>
+<a class="button centered" href="../pdf/funresume.pdf">Download Resume</a>
 </div>
 
 <div class="col-6 mob-hide">
-  <img class="about right-text" src="images/me.jpg" />
+  <img src="images/me.jpg" />
 </div>
 
 </section>
