--- a/index.html
+++ b/index.html
@@ -15,23 +15,14 @@ featured-image_path: images/whitedesk.jpg
     <h1>Hi, I'm Laura</h1>
 
     <p class="taglinecenter">
-      Fitness Junkie - Coffee Enthusiast - Wannabe Rapper
+      Fitness Junkie - Coffee Enthusiast - Annoying Vegetarian - Wannabe Rapper
     </p>
 <br />
     <p>
-<!-- Welcome a digital glimpse of my life. It's always exciting when you add a dot com behind your name. Also, I want to this to show up on Google instead of my ski-racing times from when I was 8 or my high school cheerleading photos. Here is a place where you can find my blog, porfolio,   I've been living in Asia for the past year. I've done everything from teach english, to learn how to code, to teach indoor cycling in Bangkok - mostly I've spent the last year traveling. My current goal is to travel to 30 countries before I turn 30 - I have 2 years to touchdown in 6 countries! Next up are Myanmar, Malaysia, and Singapore. -->
 
-<!-- Hello! Welcome to my little corner of the internet.  -->
-
-    BIO GOES HERE
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-      <!-- Sometimes I blog, which is mainly feelings about various happenings in my world. Ultimately this site emcompasses me: a creative mess. I'm not always buttoned up, my entire day revolves around when I am going to get coffee, I love a new challenge, and I really like to be on the move. I am a fitness instructor so naturally I love to tell people what to do. I tend to see the good things in life and try to spread kindness like it's glitter. Sometimes I am overwhelmed due to the sheer amount of ideas in my head but when I set my mind to something it sure as hell happens. See what I mean when I said creative mess? -->
-      <br /> <br />
-
-
+      Welcome to my little corner of the internet. I am just an American girl that is always on the move. I have lived and traveled throughout Southeast Asia for the past year. From teaching English outside of Chiang Mai, to learning how to code in Bali, to currently being a cycling instructor instructor in Bangkok - it has been a wild ride! I continue on a path to live a life full of purpose and attempt to find descent tacos in Thailand. The real reason for this website? To bury my ski-racing results and high school cheerleading pictures in a Google search. Enjoy!
       <br />
-
+      <br />
       <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
       <a target="blank"class="button center-text" href="/portfolio">Portfolio</a>
     </p>
