Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ featured-image_path: images/whitedesk.jpg
     <h1>Hi, I'm Laura</h1>
 
     <p class="taglinecenter">
-      Fitness Junkie - Coffee Enthusiast - Annoying Vegetarian - Wannabe Rapper
+      Fitness Junkie - Coffee Enthusiast - Adventure Seeker - Wannabe Rapper
     </p>
 <br />
     <p>
