Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ featured-image_path: images/whitedesk.jpg
 <br />
     <p>
 
-      Welcome to my little corner of the internet. I am just an American girl that is always on the move. I have lived and traveled throughout Southeast Asia for the past year. From teaching English outside of Chiang Mai, to learning how to code in Bali, to currently being a cycling instructor instructor in Bangkok - it has been a wild ride! I continue on a path to live a life full of purpose and attempt to find descent tacos in Thailand. The real reason for this website? To bury my ski-racing results and high school cheerleading pictures in a Google search. Enjoy!
+      Welcome to my little corner of the internet. I am just an American girl that is always on the move. I have lived and traveled throughout Southeast Asia for the past year. From teaching English outside of Chiang Mai, to learning how to code in Bali, to being a cycling instructor instructor in Bangkok - it has been a wild ride! Recently, I have moved to the beautiful state of Colorado. I continue on a path to live a life full of purpose and attempt to find the best happy hour wherever I go. The real reason for this website? To bury my ski-racing results and high school cheerleading pictures in a Google search. Enjoy!
       <br />
       <br />
       <a target="blank" class="button center-text" href="../pdf/funresume.pdf">Resume</a>
