Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ featured-image_path: images/whitedesk.jpg
 <section class="center-text featured">
   <h2>Say Hello</h2>
   <p>treganowanl@gmail.com</p>
-  <p><i class="fa fa-map-marker" aria-hidden="true"></i> Bangkok, Thailand </p>
+  <p><i class="fa fa-map-marker" aria-hidden="true"></i> Denver, Colorado </p>
   <nav class="social-nav centered">
     <a target="blank" href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
     <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
