Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ featured-image_path: images/whitedesk.jpg
       </div>
     {% endfor %}
 </div>
-<p class="right-text blog-button"><a href="/blog.html">VIEW BLOG</a></p>
+<!--<p class="right-text blog-button"><a href="/blog.html">VIEW BLOG</a></p>-->
 </div>
 
 
